package questao07;

public interface TextoGenerico {
    public String toString();
}
